2005-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cachedresult.cxx, src/cursor.cxx:
  - Fixes for SunC++, thanks mark@markround.com
2005-01-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler.h:
  - Finally defined NOMINMAX, thanks Trevor Morgan!
  - Should solve large object test failures on Windows
2005-01-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Workaround for BSD grep which doesn't support "-f -"
2005-01-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.h:
  - Fixed typo in Sun compiler workaround, thanks mark@markround.com
2004-12-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Apply PQXX_LIBEXPORT to sleep_seconds(), thanks Chris Pike
2004-12-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test000.cxx:
  - Added min()/max() workaround, thanks Chris Piker
2004-11-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx, src/dbtransaction.cxx:
  - Added out-of-line destructor so Visual C++ knows where to put vtable
2004-11-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/maketestvcmak.pl:
  - Removed some unneeded (presumably) libraries
2004-11-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, include/pqxx.pipeline.hxx:
  - Made inclusion of <limits> conditional on PQXX_HAVE_LIMITS
  - Fall back on INT_MAX/INT_MIN workaround if no <limits> available
 include/pqxx/result.hxx:
  - Remove assignment, comparison between reverse and regular iterators
  - Fixes problems with g++ 2.95
 src/util.cxx:
  - Include <unistd.h> if available
  - Make uses of locale conditional on PQXX_HAVE_LOCALE
 test/test058.cxx:
  - Removed unused largeobject variable
2004-11-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/compiler/VisualC++.NET-2003/config-internal.compiler.h,
 config/sample-headers/libpq/7.4/config-internal-libpq.h,
 config/sample-headers/libpq/7.4/config-public-libpq.h:
  - Fixed PQXX_SELECT_ACCEPTS_NULL
  - Disabled PQXX_HAVE_SLEEP