@@ -1,3 +1,7 @@
+2005-02-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/pipeline.cxx:
+  - More fixes for SunC++
+  - One error with SunC++ remains (std::distance() won't work)
 2005-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/cachedresult.cxx, src/cursor.cxx:
   - Fixes for SunC++, thanks mark@markround.com
@@ -13,7 +17,7 @@
   - Fixed typo in Sun compiler workaround, thanks mark@markround.com
 2004-12-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/util.hxx:
-  - Apply PQXX_LIBEXPORT to sleep_seconds(), thanks Chris Pike
+  - Apply PQXX_LIBEXPORT to sleep_seconds(), thanks Chris Piker
 2004-12-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
  test/test000.cxx:
   - Added min()/max() workaround, thanks Chris Piker
